--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@ body {
   padding: 0;
 }
 .part1 {
-  background-image: linear-gradient(rgba(210, 148, 104, 0.3), rgba(179, 119, 77, 0.3)), url(roman-bozhko-OXXsAafHDeo-unsplash.jpg);
+  background-image: linear-gradient(
+      rgba(210, 148, 104, 0.3),
+      rgba(179, 119, 77, 0.3)
+    ),
+    url(roman-bozhko-OXXsAafHDeo-unsplash.jpg);
   background-size: COVER;
   background-position: center;
   background-repeat: no-repeat;
@@ -32,19 +36,9 @@ nav ul li a {
   font-family: sorts-mill-goudy-regular;
   font-size: 20px;
   height: 2px;
-  
-   
-   
-   
-
-   
-
 }
-nav ul li a:hover{
-   text-decoration: underline;
-     
-       
-    
+nav ul li a:hover {
+  text-decoration: underline;
 }
 
 .hero {
@@ -57,10 +51,6 @@ nav ul li a:hover{
   color: #efe7dd;
 }
 
- 
- 
- 
- 
 .hero-text h1 {
   color: #efe7dd;
   width: 60%;
@@ -69,10 +59,7 @@ nav ul li a:hover{
   font-family: Roxborough cf regular;
   font-weight: 500;
   margin-bottom: -2px;
-     
-   
 }
-
 .hero-text p {
   font-family: sorts-mill-goudy-regular;
   width: 38%;
@@ -83,9 +70,7 @@ nav ul li a:hover{
   line-height: 25px;
   margin-bottom: 30px;
   letter-spacing: 1px;
-
 }
-
 .button {
   background-color: #ff6600;
   color: #fff;
@@ -98,25 +83,6 @@ nav ul li a:hover{
   font-weight: lighter;
   margin-left: 19%;
 }
-
 .button:hover {
   background-color: #e65c00;
-   
 }
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
