update 2 page address

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ nav ul li a:hover {
   height: 825px;
 }
 .part2 {
-  background-image: url("page-2-bgimage.jpg");
+  background-image: url("Page-2-bgimage.jpg");
   height: 100vh;
   display: flex;
   justify-content: center;
