--- a/style.css
+++ b/style.css
@@ -86,11 +86,11 @@ nav ul li a:hover {
       rgba(71, 68, 66, 0.3),
       rgba(237, 109, 17, 0.384)
     ),
-    url(images/roman-bozhko-OXXsAafHDeo-unsplash.jpg);
+    url(https://images.unsplash.com/photo-1493857671505-72967e2e2760?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   height: 825px;
 }
 .part2 {
-  background-image: url("images/Page-2-bgimage.jpg");
+  background-image: url(" https://img.freepik.com/free-photo/cafe-bar-hotel-loft-style_1150-10724.jpg?t=st=1730046094~exp=1730049694~hmac=6eef7fe02338e56c1875e399f7253ac730f96ac9c968281a04ebf18901697bd3&w=1060");
   height: 100vh;
   display: flex;
   justify-content: center;
