--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ nav ul li a:hover {
   letter-spacing: 1px;
 }
 .background-container {
-  background-image: url(images/Page-3-bgimg.jpg);
+  background-image: url( Cafe.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
