--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .part1 {
   background-size: COVER;
   background-position: center;
   background-repeat: no-repeat;
   background-color: rgba(0, 0, 0, 0.895);
 }
+
 nav ul {
   list-style: none;
   margin: 0;
@@ -18,27 +20,33 @@ nav ul {
   display: flex;
   float: right;
 }
+
 nav ul li {
   margin-right: 40px;
   margin-top: -20px;
 }
+
 nav ul li a {
   text-decoration: none;
   color: #efe7dd;
   font-family: sorts-mill-goudy-regular;
   font-size: 20px;
 }
+
 nav ul li a:hover {
   text-decoration: underline;
 }
+
 .hero {
   padding: 90px 0;
 }
+
 .hero-content {
   position: absolute;
   transform: translate(-50%, -50%);
   color: #efe7dd;
 }
+
 .hero-text h1 {
   color: #efe7dd;
   width: 60%;
@@ -48,6 +56,7 @@ nav ul li a:hover {
   font-weight: 500;
   margin-bottom: -2px;
 }
+
 .hero-text p {
   font-family: sorts-mill-goudy-regular;
   width: 38%;
@@ -59,6 +68,7 @@ nav ul li a:hover {
   margin-bottom: 30px;
   letter-spacing: 1px;
 }
+
 .button {
   background-color: #ff6600;
   color: #fff;
@@ -71,24 +81,26 @@ nav ul li a:hover {
   font-weight: lighter;
   margin-left: 25%;
 }
+
 .button:hover {
   background-color: #e65c00;
 }
+
 .part1,
 .part2 {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
+
 .part1 {
-  background-image: linear-gradient(
-      to right,
+  background-image: linear-gradient(to right,
       rgba(71, 68, 66, 0.3),
-      rgba(237, 109, 17, 0.384)
-    ),
+      rgba(237, 109, 17, 0.384)),
     url(https://images.unsplash.com/photo-1493857671505-72967e2e2760?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   height: 825px;
 }
+
 .part2 {
   background-image: url(" https://img.freepik.com/free-photo/cafe-bar-hotel-loft-style_1150-10724.jpg?t=st=1730046094~exp=1730049694~hmac=6eef7fe02338e56c1875e399f7253ac730f96ac9c968281a04ebf18901697bd3&w=1060");
   height: 100vh;
@@ -96,56 +108,67 @@ nav ul li a:hover {
   justify-content: center;
   font-family: sorts-mill-goudy-regular;
 }
+
 .container {
   margin: 0 auto;
   padding: 20px;
 }
+
 .header {
   text-align: center;
   margin-bottom: 50px;
 }
+
 .header h1 {
   font-size: 60px;
   color: #e0c7a5;
   font-weight: 500;
 }
+
 .content {
   display: flex;
   justify-content: space-evenly;
 }
+
 .image-box {
   width: 40%;
 }
+
 .image-box img {
   width: 100%;
   border-radius: 20px;
 }
+
 .caption {
   bottom: 0;
   padding: 20px;
   border-radius: 0 0 20px 20px;
   color: #e0c7a5;
 }
+
 .caption h2 {
   font-size: 24px;
   margin-bottom: 10px;
   text-align: center;
   font-weight: 500;
 }
+
 .caption p {
   font-size: 16px;
   text-align: center;
   font-weight: 500;
   letter-spacing: 1px;
 }
+
 .background-container {
-  background-image: url( Cafe.jpg);
+  background-image: url(images/Page-3-bg-img.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
   position: relative;
   font-family: "Arial", sans-serif;
 }
+
 .overlay {
   position: absolute;
   top: 0;
@@ -160,6 +183,7 @@ nav ul li a:hover {
   margin-top: -50px;
   padding: 80px;
 }
+
 .title {
   color: #e0c7a5;
   font-size: 70px;
@@ -167,11 +191,13 @@ nav ul li a:hover {
   font-weight: 500;
   margin-top: -30px;
 }
+
 .steps-container {
   display: flex;
   width: 100%;
   margin-top: 20px;
 }
+
 .step {
   background-color: #ecc799;
   padding: 20px;
@@ -181,15 +207,18 @@ nav ul li a:hover {
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 .step h2 {
   font-size: 1.5rem;
   font-weight: 500;
   margin-bottom: 15px;
 }
+
 .step p {
   font-size: 1rem;
   line-height: 1.5;
 }
+
 .about-container {
   background-position: center;
   height: 88vh;
@@ -202,6 +231,7 @@ nav ul li a:hover {
   margin: 0 auto;
   padding: 50px 20px;
 }
+
 .about-text {
   font-size: 18px;
   margin-left: 5%;
@@ -210,44 +240,54 @@ nav ul li a:hover {
   font-weight: 500;
   letter-spacing: 1px;
 }
+
 .about-text h1 {
   text-align: center;
   font-size: 3em;
   margin-bottom: 20px;
   font-weight: 500;
 }
+
 .about-text p,
 .about-text ul {
   margin-bottom: 20px;
 }
+
 .about-text ul {
   list-style-type: disc;
   padding-left: 20px;
 }
+
 .about-image {
   width: 60%;
   text-align: center;
 }
+
 .about-image img {
   max-width: 100%;
   height: auto;
   border-radius: 10px;
 }
+
 header {
   height: 10%;
 }
+
 .cafe img {
   height: 350px;
   width: 100%;
 }
+
 .image-section {
   display: flex;
 }
+
 .image-section img {
   margin-top: -4px;
   width: 34%;
   height: 220px;
 }
+
 footer {
   background-color: #764b36;
   padding: 40px;
@@ -255,6 +295,7 @@ footer {
   text-align: center;
   color: #ffd5ad;
 }
+
 footer h2 {
   font-weight: 400;
   letter-spacing: 4px;
@@ -262,28 +303,35 @@ footer h2 {
   margin-bottom: 10px;
   font-family: sorts-mill-goudy-regular;
 }
+
 footer p {
   font-size: 1.2rem;
   margin: 5px 0;
 }
+
 .social-media {
   margin-top: 10px;
 }
+
 .social-media a {
   margin: 20px 20px;
   vertical-align: middle;
   font-size: 30px;
   color: rgba(240, 248, 255, 0.146);
 }
+
 .social-media a i:hover {
   opacity: 0.5;
 }
+
 .footer-bottom {
   margin-top: 20px;
 }
+
 .footer-bottom p {
   font-size: 0.9rem;
 }
+
 .footer-bottom a:hover {
   color: #4493f8;
   text-decoration: underline;
