--- a/signup-user.css
+++ b/signup-user.css
@@ -10,13 +10,13 @@ html, body{
     display: flex;
 }
 .img-1, .img-4{
-    height: 210px;
-    width: 200px;
+    height: 200px;
+    width: 190px;
     background-color: red;
 }
 .img-2, .img-3{
-    height: 260px;
-    width: 220px;
+    height: 250px;
+    width: 210px;
     background-color: pink;
 }
 
@@ -61,26 +61,39 @@ html, body{
 }
 
 .box{
-    height: 550px;
     width: 540px;
     position: absolute;
-    align-items: center;
-    top: 100px;
-    left: 500px;
+    top: 50%;
+    left: 50%;
     display: flex;
+    align-items: center;
+    transform: translate(-50%, -50%);
     flex-direction: column;
+    border-radius: 20px;
     box-shadow: 20px 20px 15px rgba(118, 75, 54, 0.4);
 }
 
+@media(min-width:768px){
+    .box{
+        height: 60vh;
+        width: 40vw;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+    }
+
+}
 .box h1{
-    font-size: 45px;
+    font-size: 2rem;
     font-weight: 400;
-    margin: 0 100px;
+    /* margin: 0 100px; */
     color: rgb(2, 51, 2);
 }
-
+.upper{
+    /* margin-top: 20px; */
+}
 .box input{
-    height: 40px;
+    height: 35px;
     width: 90%;
     border: none;
     margin: 0 20px;
@@ -89,6 +102,12 @@ html, body{
     border: 2px solid #764B36;
     border-radius: 3px;
     padding: 8px;
+}
+
+@media(min-width:768px){
+    .box input{
+        height: 10%;
+    }
 }
 
 .box button {
@@ -101,12 +120,14 @@ html, body{
     font-weight: 100;
     margin: 30px 80px;
     margin-bottom: 0;
+    border-radius: 5px;
 }
 
 .box a{
     text-decoration: none;
     color: #764B36;
     font-weight: 550;
-    font-size: 15px;
+    font-size: 13px;
     margin: 0 180px;
 }
+
